# fortran-call-matplotlib

./: CMakeLists.txt  LICENSE  README.md  article.md
include/: python_module.h
src/: CMakeLists.txt  logger.f90  main.f90  mandelbrot.f90  options.f90  options.pxd  options.pyx  options_api.c  options_api.f90  plotter.f90  plotter.pyx  plotter_api.c  plotter_api.f90  pylogger.f90  pylogger.pyx  pylogger_api.c  pylogger_api.f90  python3.f90  python_modules.c
